# HyperWavelet

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/ex1/: CMakeLists.txt  ex1.cpp  plot.py
examples/ex2/: CMakeLists.txt  ex2.cpp  plot.py
examples/ex2/convergence/alpha=2.5_lambda=3.33/: analyze.py
examples/ex2/convergence/alpha=3_lambda=3/: analyze.py
examples/ex3/: CMakeLists.txt  eig.py  ex3.cpp  plot.py  plot_esa.py
examples/ex4/: CMakeLists.txt  ex4.cpp
examples/ex5/: CMakeLists.txt  ex5.cpp  parse_mesh.py  plot_esa.py  prepare_data.py
include/: Haar.h  bases.h  colocations.h  helpers.h  mesh.h  petsc.h  surface.h
src/: CMakeLists.txt  bases.cpp  colocations.cpp  helpers.cpp  mesh.cpp  surface.cpp
